tests/fixtures/invalid/bool_div_dict.py
# Cannot divide Bool and Dict[str, int]
x: float = True / {"a": 1}
